# bitfinder-main

./: .gitignore  ANALYSIS.md  DEVELOPMENT.md  DOCUMENTATION.md  FEATURE_ALERT.md  FEATURE_RANDOM_SEARCH.md  IMPLEMENTACAO_COMPLETA.md  LIBSECP256K1_README.md  LIBSECP256K1_STATUS.md  NATIVE_CRYPTO_README.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_COMPLETO.md  pubspec.yaml  setup_secp256k1.ps1
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  bitcoin_crypto.cpp
assets/: wallet_challenges.json
lib/: main.dart
lib/l10n/: app_localizations.dart
lib/models/: key_search_types.dart  keyspace_grid.dart  pool_models.dart  search_progress.dart  wallet_challenge.dart
lib/providers/: grid_provider.dart  history_provider.dart  key_finder_provider.dart  locale_provider.dart  performance_provider.dart  search_progress_provider.dart  theme_provider.dart  workload_provider.dart
lib/screens/: about_screen.dart  history_screen.dart  key_finder_screen.dart  pool_screen.dart  settings_screen.dart
lib/services/: app_open_ad_service.dart  background_search_service.dart  challenge_loader.dart  key_finder.dart  pool_client_service.dart  pool_server_service.dart  pool_storage_service.dart
lib/utils/: address_util.dart  fast_crypto.dart  native_crypto_binding.dart
lib/widgets/: keyspace_heatmap.dart  progress_heatmap.dart  propagandas.dart
scripts/: setup_secp256k1.sh
test/: address_util_test.dart  key_finder_test.dart  key_search_config_test.dart  native_crypto_binding_test.dart  search_progress_test.dart
(+4 files in other folders)
